.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Car_Park__c.object
<CustomObject>
    <description>Used to capture details of company car parks</description>
    <fields>
        <fullName>xcdhcm__Car_Park_Location__c</fullName>
        <label>Car park location</label>
        <referenceTo>xcdhcm__Location__c</referenceTo>
        <relationshipName>Car_Parks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notes__c</fullName>
        <description>Any relevant notes about the car park.</description>
        <inlineHelpText>Please enter any relevant notes about the car park.</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Number_of_Spaces__c</fullName>
        <description>The number of spaces available in the car park.</description>
        <inlineHelpText>Please enter the number of spaces available in the car park.</inlineHelpText>
        <label>Number of spaces</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Car Park</label>
    <nameField>
        <label>Car park name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Parks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>